<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:contextClickable="false">

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/buttonurluri"
        android:id="@+id/mainmenu_button_urluri"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/buttontext"
        android:id="@+id/mainmenu_button_text"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/mainmenu_button_urluri"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/buttoncontact"
        android:id="@+id/mainmenu_button_contact"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/mainmenu_button_urluri"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/buttonwlannetwork"
        android:id="@+id/mainmenu_button_wlannetwork"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/mainmenu_button_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
