<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonback"
        android:id="@+id/wlannetwork_button_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonwirteTag"
        android:id="@+id/wlannetwork_button_writetag"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fieldssid"
        android:id="@+id/wlannetwork_textview_ssid"
        android:layout_below="@+id/wlannetwork_button_back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wlannetwork_editText_ssid"
        android:layout_below="@+id/wlannetwork_textview_ssid"
        android:singleLine="true"
        android:lines="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fieldauthenticationtype"
        android:id="@+id/wlannetwork_textview_authenticationtype"
        android:layout_below="@+id/wlannetwork_editText_ssid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wlannetwork_spinner_authenticationtype"
        android:layout_below="@+id/wlannetwork_textview_authenticationtype"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/wlannetwork_textview_authenticationtype"
        android:layout_alignEnd="@+id/wlannetwork_textview_authenticationtype" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fieldpassword"
        android:id="@+id/wlannetwork_textview_password"
        android:layout_below="@+id/wlannetwork_spinner_authenticationtype"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wlannetwork_edittext_password"
        android:singleLine="true"
        android:lines="1"
        android:layout_below="@+id/wlannetwork_textview_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>